# maki

./: AGENTS.md  Cargo.toml  README.md  flake.nix  install.sh  justfile
.cargo/: config.toml
.github/scripts/: retry.sh
.github/workflows/: nix.yml  release.yml  rust.yml
maki-acp/: Cargo.toml
maki-acp/src/: lib.rs  methods.rs  permissions.rs  server.rs  translate.rs
maki-agent/: Cargo.toml
maki-agent/src/: agent.rs  anthropic.rs  auth.rs  child_guard.rs  client.rs  command.rs  headless.rs  lib.rs  permissions.rs  prompt.rs  sandbox.rs  session.rs  skill.rs  template.rs  tool.rs  types.rs
maki-agent/src/agent/: compaction.rs  history.rs  mod.rs  run.rs  streaming.rs  tool_dispatch.rs
maki-agent/src/mcp/: config.rs  mod.rs  stdio.rs
maki-agent/src/prompts/: general.md  research.md  system.md
maki-agent/src/tools/: bash.rs  batch.rs  code_execution.md  code_execution.rs  edit.md  edit.rs  file_tracker.rs  find_symbol.md  find_symbol.rs  fuzzy_replace.rs  glob.rs  grep.md  grep.rs  index.rs  lsp_diagnostics.md  lsp_diagnostics.rs  lsp_document_symbol.md  lsp_document_symbol.rs  lsp_goto.md  lsp_goto.rs  lsp_hover.md  lsp_hover.rs  lsp_implementation.md  lsp_implementation.rs  lsp_incoming_calls.md  lsp_incoming_calls.rs  lsp_outgoing_calls.md  lsp_outgoing_calls.rs  lsp_references.md  lsp_references.rs  lsp_workspace_symbol.md  lsp_workspace_symbol.rs  memory.rs  mod.rs  multiedit.rs  question.md  question.rs  read.rs  registry.rs  schema.rs  (+9 more)
maki-code-index/: Cargo.toml
maki-code-index/src/: helpers.rs  lib.rs  tests.rs
maki-code-index/src/find_symbol/: language.rs  mod.rs  search.rs
maki-code-index/src/find_symbol/lang/: c.rs  c_family.rs  cpp.rs  mod.rs  rust.rs
maki-code-index/src/index/: common.rs
maki-config/: Cargo.toml
maki-config/src/: doctor.rs  import.rs  lib.rs
maki-docgen/src/: gen_commands.rs  gen_keybindings.rs  gen_providers.rs  gen_tools.rs  lua_util.rs  main.rs
maki-interpreter/: Cargo.toml
maki-interpreter/src/: runner.rs
maki-lsp/: Cargo.toml
maki-lsp/src/: child_guard.rs  config.rs  error.rs  lib.rs  manager.rs  protocol.rs  server.rs  transport.rs
maki-lua/: Cargo.toml
maki-lua/src/: lib.rs  loader.rs  runtime.rs
maki-lua/src/api/: agent.rs  agent_api.rs  buf.rs  ctx.rs  fn_api.rs  fs.rs  mod.rs  net.rs  text.rs  tool.rs  ui.rs  win.rs
maki-lua/src/api/treesitter/: language.rs
maki-lua/src/api/ui/: buf.rs
maki-lua/tests/: plugin_host.rs  spec.rs
maki-markdown/src/: render.rs
maki-providers/: Cargo.toml
maki-providers/src/: error.rs  lib.rs  model.rs  model_registry.rs  provider.rs  retry.rs  types.rs
maki-providers/src/providers/: anthropic.rs  bedrock.rs  deepseek.rs  dynamic.rs  google.rs  local.rs  mistral.rs  mod.rs  ollama.rs  openai_compat.rs  opencode.rs  synthetic.rs  zai.rs
maki-providers/src/providers/anthropic/: auth.rs  mod.rs  shared.rs
maki-providers/src/providers/copilot/: mod.rs
maki-providers/src/providers/openai/: mod.rs  platform.rs  responses.rs
maki-storage/: Cargo.toml
maki-storage/src/: auth.rs  input_history.rs  lib.rs  log.rs  plans.rs  sessions.rs  theme.rs  version.rs
maki-tool-macro/src/: lib.rs
maki-ui/: Cargo.toml
maki-ui/benches/: splash.rs
maki-ui/src/: agent_handle.rs  animation.rs  app.rs  chat.rs  event_loop.rs  highlight.rs  keybinding_mode.rs  lib.rs  markdown.rs  mock.rs  splash.rs  terminal.rs  text_buffer.rs  theme.rs  update.rs
maki-ui/src/agent/: agent_loop.rs  command_router.rs  mod.rs
maki-ui/src/app/: btw.rs  mod.rs  mode.rs  mouse.rs  queue.rs  session.rs  session_state.rs  shell.rs  tests.rs  view.rs
maki-ui/src/components/: btw_modal.rs  chat_picker.rs  code_view.rs  command.rs  help_modal.rs  index_highlight.rs  input.rs  keybindings.rs  list_picker.rs  login_picker.rs  messages.rs  mod.rs  model_picker.rs  permission_prompt.rs  plan_form.rs  question_form.rs  queue_panel.rs  render_hints.rs  scrollbar.rs  session_picker.rs  status_bar.rs  streaming_content.rs  theme_picker.rs  todo_panel.rs  tool_display.rs
maki-ui/src/components/messages/: mod.rs  segment.rs  selection.rs  tests.rs
maki-ui/src/themes/: ayu_dark.toml  carbonfox.toml  catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  dracula.toml  everforest_dark.toml  fleet_dark.toml  github_dark.toml  gruvbox.toml  gruvbox_light.toml  kanagawa.toml  material_darker.toml  monokai_pro.toml  night_owl.toml  nightfox.toml  nord.toml  onedark.toml  rose_pine.toml  solarized_dark.toml  solarized_light.toml  tokyonight.toml  vscode_dark_plus.toml  zenburn.toml
plugins/bash/: init.lua
plugins/edit/: init.lua
plugins/edit/tests/: spec.lua
plugins/glob/: init.lua
plugins/index/: init.lua
plugins/index/lang/: c.lua  cpp.lua
plugins/index/tests/: spec.lua
plugins/lib/maki/: fuzzy_replace.lua  list_picker.lua  text_input.lua
plugins/lib/tests/: spec.lua
plugins/question/: question_form.lua
plugins/read/: init.lua
plugins/skill/: init.lua
plugins/task/: init.lua
plugins/task/tests/: spec.lua
plugins/webfetch/: init.lua
plugins/webfetch/tests/: spec.lua
plugins/websearch/: init.lua
scripts/: ac.py  analyze.py  collect.py  compare.py
site/: index.html
site/docs/content/architecture/: _index.md
site/docs/content/commands/: _index.md
site/docs/content/configuration/: _index.md
site/docs/content/keybindings/: _index.md
site/docs/content/mcp/: _index.md
site/docs/content/providers/: _index.md
site/docs/content/tools/: _index.md
site/docs/templates/: base.html
src/: cli.rs  main.rs  print.rs  setup.rs  update.rs
src/cmd/: acp.rs  mod.rs  subcmd.rs  tui.rs
