[package]
name = "maki-acp"
version.workspace = true
edition.workspace = true

[dependencies]
maki-agent = { workspace = true }
maki-providers = { workspace = true }
maki-storage = { workspace = true }
agent-client-protocol-schema = { workspace = true }
smol = { workspace = true }
flume = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
