[package]
name = "maki-code-index"
version.workspace = true
edition.workspace = true

[features]
default = ["lang-rust", "lang-python", "lang-typescript", "lang-go", "lang-java",
           "lang-c", "lang-cpp", "lang-c-sharp", "lang-ruby", "lang-php",
           "lang-swift", "lang-kotlin", "lang-scala", "lang-bash", "lang-lua"]
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]
lang-typescript = ["dep:tree-sitter-typescript", "dep:tree-sitter-javascript"]
lang-go = ["dep:tree-sitter-go"]
lang-java = ["dep:tree-sitter-java"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp", "dep:tree-sitter-c"]
lang-c-sharp = ["dep:tree-sitter-c-sharp"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-php = ["dep:tree-sitter-php"]
lang-swift = ["dep:tree-sitter-swift"]
lang-kotlin = ["dep:tree-sitter-kotlin-ng"]
lang-scala = ["dep:tree-sitter-scala"]
lang-bash = ["dep:tree-sitter-bash"]
lang-lua = ["dep:tree-sitter-lua"]

[dependencies]
thiserror = { workspace = true }
ignore = { workspace = true }
memchr = { workspace = true }
tree-sitter = "0.26"
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-kotlin-ng = { version = "1.1", optional = true }
tree-sitter-scala = { version = "0.25", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }

[dev-dependencies]
test-case = { workspace = true }
