[package]
name = "maki-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
