[package]
name = "maki-interpreter"
version.workspace = true
edition.workspace = true

[dependencies]
monty = { git = "https://github.com/pydantic/monty.git", rev = "7a0d4b7", package = "monty" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
